Fully functional back end CRUD and navigation

--- a/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.index.html.twig
@@ -1,3 +1,10 @@
-Blocks Index <br>
+<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
+<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
 
-<a href="{{ path('reconnix_main_admin_blocks_add') }}">Add</a>
+Blocks<br>
+
+{% for block in blocks %}
+	<a href="{{ path('reconnix_main_admin_blocks_edit', {'id': block.id }) }}">{{block.name}}</a><br>
+{% endfor %}
+<br><a href="{{ path('reconnix_main_admin_blocks_add') }}">Add</a>
