--- a/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.edit.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.edit.html.twig
@@ -1,1 +1,7 @@
-Editing Page number {{id}}
+<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
+<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
+
+Edit Page {{id}}
+
+{{form(form)}}
