--- a/src/Reconnix/MainBundle/Resources/views/Admin/admin.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/admin.index.html.twig
@@ -1,1 +1,3 @@
-Admin Index page
+<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
+<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
