--- a/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.add.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.add.html.twig
@@ -1,3 +1,7 @@
+<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
+<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
+
 Add a Page
 
 {{form(form)}}
