--- a/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.index.html.twig
@@ -1,3 +1,10 @@
-Pages Index <br>
+<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
+<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
 
-<a href="{{ path('reconnix_main_admin_pages_add') }}">Add</a>
+Pages<br>
+
+{% for page in pages %}
+	<a href="{{ path('reconnix_main_admin_pages_edit', {'id': page.id }) }}">{{page.title}}</a><br>
+{% endfor %}
+<br><a href="{{ path('reconnix_main_admin_pages_add') }}">Add</a>
