--- a/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.edit.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.edit.html.twig
@@ -5,3 +5,5 @@
 Edit Block {{id}}
 
 {{form(form)}}
+
+{{tinymce_init({document_base_url: 'http://localhost:81/symfony2/path/', relative_urls: 'true'})}}
