--- a/src/Reconnix/MainBundle/Resources/views/Blocks/javascripts.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Blocks/javascripts.html.twig
@@ -8,6 +8,11 @@
 
     <script src="{{ asset('js/responsivegridsystem.js') }}"></script>
     <script src="{{ asset('js/main.js') }}"></script>
+    <script src="{{ asset('js/rec-services.js') }}"></script>
+    <script src="{{ asset('js/rec-profiles.js') }}"></script>
+    <script src="{{ asset('js/rec-social-media.js') }}"></script>
+    <script src="{{ asset('js/rec-newsroom.js') }}"></script>
+    <script src="{{ asset('js/twitterfetch.js') }}"></script>
 
     <script>
         var _gaq=[['_setAccount','UA-41472648-1'],['_trackPageview']];
