Dynamic form creation working, moving on to finishing cms

--- a/src/Reconnix/MainBundle/Resources/views/Page/page.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Page/page.index.html.twig
@@ -20,7 +20,7 @@
 
 {% block body %}
 	{% if name == 'newsroom' %}
-		{{ include('ReconnixMainBundle::newsroom.html.twig') }}
+		{{ include('ReconnixMainBundle::Page/newsroom.html.twig') }}
 	{% else %}
 		{{ body | raw }}
 	{% endif %}
