Everything wizard related!

--- a/src/Reconnix/MainBundle/Resources/views/Page/newsroom.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Page/newsroom.html.twig
@@ -4,15 +4,15 @@
 			{% for post in posts | slice(0, 1) %}
 				<div class="col span_3_of_3 news-item news-large press-release">
 					<div class="inner">
-						<a href="/press-release/reconnix-ceo-named-as-finalist/">
-							<h1 class='news-title'>{{post.title}}</h1>
+						<a href="../newsroom/{{post.tag}}/{{post.name}}">
+							<h1 class='news-title'>{{post.title | raw}}</h1>
 						</a>
-						<a href="/press-release/reconnix-ceo-named-as-finalist/">
+						<a href="../newsroom/{{post.tag}}/{{post.name}}">
 							<span class='news-date'>{{post.date | date('Y-m-d') }}</span>
 						</a>
 						<p>
-							{{post.content | slice(0, 512)}}...
-							<a href='/press-release/reconnix-ceo-named-as-finalist/'>
+							{{post.content | slice(0, 512) | raw}}...
+							<a href="../newsroom/{{post.tag}}/{{post.name}}">
 								<span class='read-more'> Read more</span>
 							</a>
 						</p>
@@ -22,15 +22,15 @@
 			{% for post in posts | slice(1, 1) %}
 				<div class="col span_1_of_3 news-item news-top-right news-small news">
 					<div class="inner">
-						<a href="/news/will-linux-ever-win-on-the-desktop/">
-							<h3 class='news-title'>{{post.title}}</h3>
+						<a href="../newsroom/{{post.tag}}/{{post.name}}">
+							<h3 class='news-title'>{{post.title | raw}}</h3>
 						</a>
-						<a href="/news/will-linux-ever-win-on-the-desktop/">
+						<a href="../newsroom/{{post.tag}}/{{post.name}}">
 							<span class='news-date'>{{post.date | date('Y-m-d') }}</span>
 						</a>
 						<p>
-							{{post.content | slice(0, 512)}}... 
-							<a href='/news/will-linux-ever-win-on-the-desktop/'>
+							{{post.content | slice(0, 490) | raw}}... 
+							<a href="../newsroom/{{post.tag}}/{{post.name}}">
 								<span class='read-more'> Read more</span>
 							</a>
 						</p>
@@ -41,15 +41,15 @@
 				{% for post in posts | slice(2) %}
 					<div class="col span_1_of_3 news-item news-small news">
 						<div class="inner">
-							<a href="/news/happy-birthday-to-the-macintosh/">
-								<h3 class='news-title'>{{post.title}}</h3>
+							<a href="../newsroom/{{post.tag}}/{{post.name}}">
+								<h3 class='news-title'>{{post.title | raw}}</h3>
 							</a>
-							<a href="/news/happy-birthday-to-the-macintosh/">
+							<a href="../newsroom/{{post.tag}}/{{post.name}}">
 								<span class='news-date'>{{post.date | date('Y-m-d') }}</span>
 							</a>
 							<p>
-								{{post.content | slice(0, 450)}}... 
-								<a href='/news/happy-birthday-to-the-macintosh/'>
+								{{post.content | slice(0, 450) | raw}}... 
+								<a href="../newsroom/{{post.tag}}/{{post.name}}">
 									<span class='read-more'> Read more</span>
 								</a>
 							</p>				
