--- a/src/Reconnix/MainBundle/Resources/views/Admin/admin.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/admin.index.html.twig
@@ -1,3 +1,4 @@
 <a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
 <a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
-<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
+<a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a><hr>
