Home page working with all blocks and Twig parsing

--- a/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.edit.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Blocks/admin.blocks.edit.html.twig
@@ -1,6 +1,9 @@
+<a href="{{ path('reconnix_main_admin_index') }}">Home</a>
 <a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
 <a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
-<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a><hr>
+<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
+<a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a>
+<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a><hr>
 
 Edit Block {{id}}
 
