CMS working well with TwigRenderer - adding menu functionality - crud actions written

--- a/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.add.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.add.html.twig
@@ -6,7 +6,7 @@
 <a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a>
 <a href="{{ path('reconnix_main_admin_menu_index') }}">Menu</a><hr>
 
-Add a Block
+Add a Menu item
 
 {{form(form)}}
 
