--- a/src/Reconnix/MainBundle/Resources/views/Admin/Posts/admin.posts.add.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Posts/admin.posts.add.html.twig
@@ -3,7 +3,8 @@
 <a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
 <a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
 <a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a>
-<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a><hr>
+<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a>
+<a href="{{ path('reconnix_main_admin_menu_index') }}">Menu</a><hr>
 
 Add a Post
 
