--- a/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.index.html.twig
@@ -1,14 +1,35 @@
-<a href="{{ path('reconnix_main_admin_index') }}">Home</a>
-<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
-<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
-<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
-<a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a>
-<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a>
-<a href="{{ path('reconnix_main_admin_menu_index') }}">Menu</a><hr>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+        <title>{% block title %}Reconnix{% endblock %} - Reconnix</title>
 
-Menu<br>
+        <link href="{{  asset('css/adminMain.css') }}" rel="stylesheet" media="all" />
 
-{% for item in menu %}
-	<a href="{{ path('reconnix_main_admin_menu_edit', {'id': item.id }) }}">{{item.name}}</a><br>
-{% endfor %}
-<br><a href="{{ path('reconnix_main_admin_menu_add') }}">Add</a>
+    </head>
+    <div id="admin-nav">
+    	<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
+    	<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
+    </div>
+	
+    <body>
+		<table id="dashboard-table">
+			<thead>
+			<tr><th colspan="3">Menu</th></tr>
+			</thead>
+			<tbody>
+			{% for item in menu %}
+				<tr>
+					<td>{{item.name}}</td>
+					<td>
+						<a href="{{ path('reconnix_main_admin_menu_edit', {'id': item.id}) }}">View/Edit</a>
+					</td>
+					<td>
+						<a href="{{ path('reconnix_main_admin_menu_delete', {'id': item.id}) }}">Delete</a>
+					</td>
+				</tr>
+			{% endfor %}
+			</tbody>
+		</table>
+	</body>
+</html>
