--- a/src/Reconnix/MainBundle/Resources/views/Admin/Templates/admin.templates.add.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Templates/admin.templates.add.html.twig
@@ -1,13 +1,69 @@
-<a href="{{ path('reconnix_main_admin_index') }}">Home</a>
-<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
-<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
-<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
-<a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a>
-<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a>
-<a href="{{ path('reconnix_main_admin_menu_index') }}">Menu</a><hr>
+<!DOCTYPE html>
+<html>
+    <head>
+    	{{tinymce_init()}}
+        <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+        <title>{% block title %}Reconnix{% endblock %} - Reconnix</title>
 
-Add a Page
+        <link href="{{  asset('css/adminMain.css') }}" rel="stylesheet" media="all" />
+  		<script src="//code.jquery.com/jquery-1.9.1.js"></script>
+  		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  		<link rel="stylesheet" href="/resources/demos/style.css">
+  		<script>
+  		$(function() {
+    		$( "#tabs" ).tabs();
+  		});
+  		</script>
+    </head>
+     <body>
+     	<div id="admin-nav">
+    		<div id="admin-nav-logo">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">
+    				<img src="{{ asset('images/admin-logo.png')}}" />
+    			</a>
+    		</div>
+    		<div id="admin-nav-links">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
+    			<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
+    		</div>
+   		</div>
 
-{{form(form)}}
 
-{{tinymce_init()}}
+	<div id="tabs">
+		<ul>
+			<li><a href="#tabs-1">General</a></li>
+		</ul>
+		{{form_start(form)}}
+			<div id="tabs-1">
+			
+				<table class="form-table">
+					<tr>
+						<td>
+							{{form_label(form.name)}}
+							{{form_errors(form.name)}}
+						</td>
+						<td>{{form_widget(form.name)}}</td>
+					</tr>
+	
+					<tr>
+						<td>
+							{{form_label(form.title)}}
+							{{form_errors(form.title)}}
+						</td>
+						<td>{{form_widget(form.title)}}</td>
+					</tr>
+	
+					<tr>
+						<td>
+							{{form_label(form.content)}}
+							{{form_errors(form.content)}}
+						</td>
+						<td>{{form_widget(form.content)}}</td>
+					</tr>					
+				</table>
+			</div>
+		{{form_end(form)}}
+	</div>
+
+	</body>
+</html>
