--- a/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.add.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.add.html.twig
@@ -1,13 +1,89 @@
-<a href="{{ path('reconnix_main_admin_index') }}">Home</a>
-<a href="{{ path('reconnix_main_admin_blocks_index') }}">Blocks</a>
-<a href="{{ path('reconnix_main_admin_pages_index') }}">Pages</a>
-<a href="{{ path('reconnix_main_admin_posts_index') }}">Posts</a>
-<a href="{{ path('reconnix_main_admin_content_wizard_index') }}">Wizard</a>
-<a href="{{ path('reconnix_main_admin_templates_index') }}">Templates</a>
-<a href="{{ path('reconnix_main_admin_menu_index') }}">Menu</a><hr>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+        <title>{% block title %}Reconnix{% endblock %} - Reconnix</title>
 
-Add a Menu item
+        <link href="{{  asset('css/adminMain.css') }}" rel="stylesheet" media="all" />
+        <link href="{{  asset('css/jquery.qtip.css') }}" rel="stylesheet" media="all" />
+  		<script src="//code.jquery.com/jquery-1.9.1.js"></script>
+  		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  		<script src="{{ asset('js/jquery.qtip.js') }}"></script>
 
-{{form(form)}}
+  		
+  		<link rel="stylesheet" href="/resources/demos/style.css">
+  		<script>
+  		$(function() {
+    		$( "#tabs" ).tabs();
+    		$(".hasToolTip").each(function(){
+    			$(this).qtip({
+    				content: {
+    					text: $(this).next(".info-popup")
+    				}
+    			})
+    		})
+  		});
+  		</script>
+    </head>
+     <body>
+     	<div id="admin-nav">
+    		<div id="admin-nav-logo">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">
+    				<img src="{{ asset('images/admin-logo.png')}}" />
+    			</a>
+    		</div>
+    		<div id="admin-nav-links">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
+    			<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
+    		</div>
+   		</div>
 
-{{tinymce_init()}}
+
+	<div id="tabs">
+		<ul>
+			<li><a href="#tabs-1">General</a></li>
+		</ul>
+		{{form_start(form)}}
+			<div id="tabs-1">
+			
+				<table class="form-table">
+					<tr>
+						<td>
+							{{form_label(form.url)}}
+							{{form_errors(form.url)}}
+						</td>
+						<td>{{form_widget(form.url)}}</td>
+					</tr>
+					<tr>
+						<td>
+							{{form_label(form.name)}}
+							{{form_errors(form.name)}}
+						</td>
+						<td>{{form_widget(form.name)}}</td>
+					</tr>	
+					<tr>
+						<td>
+							{{form_label(form.weight)}}
+							{{form_errors(form.weight)}}
+
+							
+								<a class = "hasToolTip" href="#">
+									<img src="{{ asset('images/info-popup.png') }}" />
+								</a>
+								<div class = "info-popup">
+									<p>Sets the order for Menu Items to be displayed</p>
+									<p>Default value is 0</p>
+									<p>Values higher than 0 are displayed first</p>
+									<p>The higher the value, the earlier it is displayed</p>
+									<p>Menu Items that share a value with another Menu Item shall be prioritised alphabetically</p>
+								</div>
+						</td>
+						<td>{{form_widget(form.weight)}}</td>
+					</tr>			
+				</table>
+			</div>
+		{{form_end(form)}}
+	</div>
+
+	</body>
+</html>
