--- a/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Menu/admin.menu.index.html.twig
@@ -7,22 +7,30 @@
         <link href="{{  asset('css/adminMain.css') }}" rel="stylesheet" media="all" />
 
     </head>
-    <div id="admin-nav">
-    	<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
-    	<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
-    </div>
-	
-    <body>
+     <body>
+     	<div id="admin-nav">
+    		<div id="admin-nav-logo">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">
+    				<img src="{{ asset('images/admin-logo.png')}}" />
+    			</a>
+    		</div>
+    		<div id="admin-nav-links">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
+    			<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
+    		</div>
+   		</div>
 		<table id="dashboard-table">
 			<thead>
-			<tr><th colspan="3">Menu</th></tr>
+				<th colspan="1">Menu</th>
+				<th colspan="2">
+					<a href="{{ path('reconnix_main_admin_menu_add') }}">Add New</a>
+				</th>
 			</thead>
 			<tbody>
 			{% for item in menu %}
 				<tr>
-					<td>{{item.name}}</td>
 					<td>
-						<a href="{{ path('reconnix_main_admin_menu_edit', {'id': item.id}) }}">View/Edit</a>
+						<a href="{{ path('reconnix_main_admin_menu_edit', {'id': item.id}) }}">{{item.name}}</a>
 					</td>
 					<td>
 						<a href="{{ path('reconnix_main_admin_menu_delete', {'id': item.id}) }}">Delete</a>
