--- a/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.index.html.twig
+++ b/src/Reconnix/MainBundle/Resources/views/Admin/Pages/admin.pages.index.html.twig
@@ -5,25 +5,49 @@
         <title>{% block title %}Reconnix{% endblock %} - Reconnix</title>
 
         <link href="{{  asset('css/adminMain.css') }}" rel="stylesheet" media="all" />
+  		<script src="//code.jquery.com/jquery-1.9.1.js"></script>
+  		<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  		<script>
+  		$(function() {
+    		$('.ajax-call').click(function(){
+    			$.ajax({
+    				type: "POST",
+    				url: "{{ path('reconnix_main_admin_pages_delete', {id:31}) }}"
 
+    			}).done(function(msg){
+    				$("#mydiv").append(msg);
+    			})
+    		})
+  		});
+  		</script>
     </head>
-    <div id="admin-nav">
-    	<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
-    	<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
-    </div>
-	
-    <body>
+     <body>
+     	<div id="admin-nav">
+    		<div id="admin-nav-logo">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">
+    				<img src="{{ asset('images/admin-logo.png')}}" />
+    			</a>
+    		</div>
+    		<div id="admin-nav-links">
+    			<a class="admin-nav" href="{{ path('reconnix_main_admin_index') }}">Admin Home</a>
+    			<a class="admin-nav" href="{{ path('reconnix_main_index', {"name":"home"}) }}">Visit Site</a>
+    		</div>
+   		</div>
 		<table id="dashboard-table">
 			<thead>
-			<tr><th colspan="3">Pages</th></tr>
+			<tr>
+				<th colspan="1">Pages</th>
+				<th colspan="2">
+					<a href="{{ path('reconnix_main_admin_pages_add') }}">Add New</a>
+				</th>
+			</tr>
 			</thead>
 			<tbody>
 			{% for page in pages %}
 				<tr>
-					<td>{{page.title}}</td>
 					<td>
-						<a href="{{ path('reconnix_main_admin_pages_edit', {'id': page.id}) }}">View/Edit</a>
-					</td>
+            <a href="{{ path('reconnix_main_admin_pages_edit', {'id': page.id}) }}">{{page.title}}</a>
+          </td>
 					<td>
 						<a href="{{ path('reconnix_main_admin_pages_delete', {'id': page.id}) }}">Delete</a>
 					</td>
